@@ -1,3 +1,8 @@
+2004-03-15 [alfons]	0.9
+
+	* src/mailmbox_folder.c
+		fix interface breakage
+
 2003-12-11 [paul]	0.8
 
 	* Makefile.am
